[package]
name = "chain_ibc"
version = "0.1.0"
edition = "2021"
license="ASL2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.151", features=["derive"]}
serde_json = "1.0.91"
error-chain="0.12"
clap={version="4.1", features=["derive"]}
chrono = "0.4.23"